WOAH WOAH WOAH molq molq da si gi nqmame teq iskam i az da si dobavq rabotite vika "rarnah finalniq proekt" shhhhhhh ei, kolio q po seriozno btw moqta chast e strahotna i programata raboti 6 puti po bavno no kakto i da e :D

--- a/trinity.cbp
+++ b/trinity.cbp
@@ -62,6 +62,7 @@
 		<Unit filename="src/ImplicitSurface.h" />
 		<Unit filename="src/MarchingCubes.cpp" />
 		<Unit filename="src/MarchingCubes.h" />
+		<Unit filename="src/TreeNode.h" />
 		<Unit filename="src/bbox.h" />
 		<Unit filename="src/bitmap.cpp" />
 		<Unit filename="src/bitmap.h" />
